--- a/DatabaseWizards/src/org/unesco/jisis/wizards/marc/Bundle.properties
+++ b/DatabaseWizards/src/org/unesco/jisis/wizards/marc/Bundle.properties
@@ -258,3 +258,4 @@ IMPORT_OPTIONS=Import Options
 DATABASE=Database
 PARAMETERS=Parameters
 NONE=<none>
+ImportNewVisualPanel31.jLabel1.text=Database to which the imported records will be added
