--- a/Data Entry Ex/nbproject/project.properties
+++ b/Data Entry Ex/nbproject/project.properties
@@ -1,2 +1,4 @@
-javac.source=1.6
+file.reference.miglayout-core-5.1-20150404.220010-96.jar=release/modules/ext/miglayout-core-5.1-20150404.220010-96.jar
+file.reference.miglayout-swing-5.1-20150404.220019-96.jar=release/modules/ext/miglayout-swing-5.1-20150404.220019-96.jar
+javac.source=1.7
 javac.compilerargs=-Xlint -Xlint:-serial
