--- a/Data Entry Ex/src/org/unesco/jisis/dataentryex/Bundle.properties
+++ b/Data Entry Ex/src/org/unesco/jisis/dataentryex/Bundle.properties
@@ -88,3 +88,4 @@ OutlineTopComponent.btnFirst.text=First
 OutlineTopComponent.btnLast.text=Last
 OutlineTopComponent.btnPrev.text=Prev
 OutlineTopComponent.btnNext.text=Next
+OutlineTopComponent.btnMarc21FixedFieldEditor.text=FF
