--- a/FmtManager/src/org/unesco/jisis/FmtManager/Bundle.properties
+++ b/FmtManager/src/org/unesco/jisis/FmtManager/Bundle.properties
@@ -82,3 +82,5 @@ FmtManagerTopComponent.btnSave.text=Save
 FmtManagerTopComponent.btnDelete.text=Delete
 FmtManagerTopComponent.btnSyntax.toolTipText=Check current PFT syntax
 FmtManagerTopComponent.btnSyntax.text=Syntax
+FmtManagerTopComponent.jLabel1.text=Font Size:
+FmtManagerTopComponent.sliderFontSize.toolTipText=Increase/Decrease Editor Font
