--- a/JISIS GUI/src/org/unesco/jisis/gui/Bundle.properties
+++ b/JISIS GUI/src/org/unesco/jisis/gui/Bundle.properties
@@ -53,3 +53,5 @@ MSG_NotAuthorized=Permissions Not Granted For This action!\nMust Have Admin or O
 MSG_NotAuthorizedDialogTitle=No Permission 
 MSG_MustBeAdmin=Permission Not Granted For this Action!\nMust Be Database Administrator
 MSG_MustBeAdminDialogTitle=Must Be Database Administrator 
+PftSourceDlg.jLabel1.text=Font Size:
+PftSourceDlg.sliderFontSize.toolTipText=Inrease/Decrease Font Size
