--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@
 /DbServerContentManager/nbproject/private/
 /nekohtml/nbproject/private/
 /usersmagement/nbproject/private/
+/DataEntry/build/
+/nekohtml/build/
