--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,7 @@ project.org.unesco.jisis.validationapi=ValidationAPI
 project.org.unesco.jisis.weboutput=WebOutput
 project.org.unesco.jisis.z3950=Z3950
 project.outline=org-netbeans-swing-outline
-run.args.extra=-J-Xmx1024M -J-Xms1024M  -J-Dorg.netbeans.ProxyClassLoader.level=1000 -J-Djavafx.runtime.path=C:/Programmes/java/jre7/lib -J-Dnetbeans.slow.system.clipboard.hack=false -J-Duser.language=en -J-Duser.country=EN -J-Dnetbeans.logger.console=true -J-ea 
+run.args.extra=-J-Xmx1024M -J-Xms1024M  -J-Dlogback.configurationFile=conf/logback.xml  -J-Dorg.netbeans.ProxyClassLoader.level=1000 -J-Djavafx.runtime.path=C:/Programmes/java/jre7/lib -J-Dnetbeans.slow.system.clipboard.hack=false -J-Duser.language=en -J-Duser.country=EN -J-Dnetbeans.logger.console=true -J-ea 
 disabled.clusters=\
     enterprise2,\
     harness,\
