Refactoring of the Open Connection wizard to facilitate further use of the server connection code

--- a/DatabaseWizards/src/org/unesco/jisis/wizards/connopen/Bundle.properties
+++ b/DatabaseWizards/src/org/unesco/jisis/wizards/connopen/Bundle.properties
@@ -2,11 +2,16 @@
 CTL_ConnOpenWizardAction=Open Connection
 CTL_ConnOpenWizardPanel=Open remote database connection
 CTL_ConnOpenWizardStepOne=Enter remote database details
-connOpenVisualPanel1.lblPort.text=Port (default 1111):
-connOpenVisualPanel1.txtUsername.text=admin
-connOpenVisualPanel1.txtPassword.text=admin
-connOpenVisualPanel1.lblUsername.text=User:
-connOpenVisualPanel1.lblPassword.text=Password:
-connOpenVisualPanel1.txtHostName.text=localhost
-connOpenVisualPanel1.txtPort.text=1111
-connOpenVisualPanel1.lblHostName.text=Host Name:
+MSG_ConnAlreadyEstablished=Connection to [ {0} ] on port [ {0} ] already established!
+MSG_CannotAuthenticate=Cannot Authenticate the User Name/Password pair\n Please Try again
+MSG_ExceptionRaised=Exception raised [ {0} ]
+MSG_ConnectionToServerPleaseWait=Connection to Server Please Wait ...
+MSG_ConnectedToServer=Connected to server
+ConnectionOpenVisualPanel1.txtPassword.text=admin
+ConnectionOpenVisualPanel1.txtUsername.text=admin
+ConnectionOpenVisualPanel1.txtPort.text=1111
+ConnectionOpenVisualPanel1.txtHostName.text=localhost
+ConnectionOpenVisualPanel1.lblPassword.text=Password:
+ConnectionOpenVisualPanel1.lblUsername.text=User:
+ConnectionOpenVisualPanel1.lblPort.text=Port (default 1111):
+ConnectionOpenVisualPanel1.lblHostName.text=Host Name:
