--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@
 /Lucene-6.0.0/nbproject/private/
 /Lucene-6.3.0/build/
 /work/
+/DirectConnectAndOpenDatabase/nbproject/private
+/DirectConnectOpen/nbproject/private/
+/DirectConnectOpen/build/
