Refactoring- Move of ClientDatabaseProxy messages from JISIS CORE to JISIS UTIL module new package org.unesco.jisis.jisisutil.proxy

--- a/JISIS Utils/src/org/unesco/jisis/jisisutils/proxy/Bundle.properties
+++ b/JISIS Utils/src/org/unesco/jisis/jisisutils/proxy/Bundle.properties
@@ -4,3 +4,9 @@ MSG_ExceptionRaised=Exception raised [ {0} ]
 MSG_ConnectionToServerPleaseWait=Connection to Server Please Wait ...
 MSG_ConnectedToServer=Connected to server
 
+MSG_noDefaultConnection=" No Default Connection was Found,\nPlease, Open a Connection Before choosing this action."
+MSG_noDefaultDatabase=" No Default Database was Found,\nPlease, Open a Database Before choosing this action."
+MSG_IndexFormatTooOld=" Index Format Too Old For Current Version Of Lucene,\nPlease, delete all index files in the database /indexes/master directory.\n And Re Index"
+MSG_IndexEmptyOrNotExist="The index is either empty or doesn't exist !"
+MSG_NoMoreNextSequentialRecord= "This is the last sequential record, no more next record !"
+MSG_NoMorePrevSequentialRecord= "This is the first sequential record, no more prev record !"
