Upgrade to Lucene 6.4.2

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@
 /DirectConnectAndOpenDatabase/nbproject/private
 /DirectConnectOpen/nbproject/private/
 /DirectConnectOpen/build/
+/Lucene-6.3.0/nbproject/private/
+/Lucene-6.4.2/build/
