Upgrade to Lucene 6.5 - Multi threads Indexing and index terms count

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@
 /DirectConnectOpen/build/
 /Lucene-6.3.0/nbproject/private/
 /Lucene-6.4.2/build/
+/Lucene-6.4.2/nbproject/private/
+/lucene-6.5.0/build/
