--- a/lucene-6.5.0/build.xml
+++ b/lucene-6.5.0/build.xml
@@ -2,7 +2,7 @@
 <!-- You may freely edit this file. See harness/README in the NetBeans platform -->
 <!-- for some information on what you could do (e.g. targets to override). -->
 <!-- If you delete this file and reopen the project it will be recreated. -->
-<project name="org.unesco.jisis.lucene_6_4_2" default="netbeans" basedir=".">
-    <description>Builds, tests, and runs the project org.unesco.jisis.lucene_6_4_2.</description>
+<project name="org.unesco.lucene_6_5_0" default="netbeans" basedir=".">
+    <description>Builds, tests, and runs the project org.unesco.lucene_6_5_0.</description>
     <import file="nbproject/build-impl.xml"/>
 </project>
