--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,7 +26,6 @@ project.org.unesco.jisis.je_6_4_25=Berkeley je-6.4.25
 project.org.unesco.jisis.jetty.webserver=JettyWebServer
 project.org.unesco.jisis.jisiscore=JISIS Core
 project.org.unesco.jisis.jisisgui=JISIS GUI
-project.org.unesco.jisis.lucene_6_4_2=Lucene-6.4.2
 project.org.unesco.jisis.marc4j=marc4j-2.4
 project.org.unesco.jisis.printsort=PrintSort
 project.org.unesco.jisis.searchhistory=Search History
@@ -35,6 +34,7 @@ project.org.unesco.jisis.tika_1_13=tika-app-1.13
 project.org.unesco.jisis.validationapi=ValidationAPI
 project.org.unesco.jisis.weboutput=WebOutput
 project.org.unesco.jisis.z3950=Z3950
+project.org.unesco.lucene_6_5_0=lucene-6.5.0
 project.outline=org-netbeans-swing-outline
 run.args.extra=-J-Xmx1024M -J-Xms1024M  -J-Dlogback.configurationFile=conf/logback.xml  -J-Dhttp.agent="Mozilla/5.0 (Windows NT 10.0; WOW64; rv:50.0) Gecko/20100101 Firefox/50.0" -J-Dapple.laf.useScreenMenuBar=true -J-Dapple.awt.graphics.UseQuartz=true -J-Dsun.java2d.noddraw=true -J-Dsun.java2d.dpiaware=true -J-Dorg.netbeans.ProxyClassLoader.level=1000 -J-server -J-Dnetbeans.slow.system.clipboard.hack=false -J-Duser.language=en -J-Duser.country=EN -J-Dnetbeans.logger.console=true -J-ea 
 disabled.clusters=\
@@ -83,7 +83,7 @@ modules=\
     ${project.org.unesco.jisis.iText554}:\
     ${project.org.unesco.jisis.tika_1_13}:\
     ${project.org.unesco.jisis.je_6_4_25}:\
-    ${project.org.unesco.jisis.lucene_6_4_2}
+    ${project.org.unesco.lucene_6_5_0}
 project.org.jisis.termsdictionary=Terms Dictionary
 project.org.unesco.jisis.database.explorer=DataViewer
 project.org.unesco.jisis.databrowser=Data Browser
