Fix bug for PFT defined in server.conf fil

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -1,10 +1,10 @@
 # Server configuration file
 port=1111
 #jetty.webserver.baseurl=http://192.168.0.11:8585/
-jisis.dbserver.ip=127.0.0.1
+#jisis.dbserver.ip=127.0.0.1
 jisis.dbname.open=CDS
 jisis.dbhome.open=DEF_HOME
-#jisis.pft=html2
+jisis.pft=html2
 
 
 
