--- a/conf/server.conf
+++ b/conf/server.conf
@@ -2,8 +2,8 @@
 port=1111
 #jetty.webserver.baseurl=http://192.168.0.11:8585/
 jisis.dbserver.ip=127.0.0.1
-jisis.dbname.open=CDS
-jisis.dbhome.open=DEF_HOME
+#jisis.dbname.open=CDS
+#jisis.dbhome.open=DEF_HOME
 #jisis.pft=html2
 
 
