PFT bug fixes, PFT Global Variables, Repeatable subfields Export with Search results and Hit File list

--- a/DB Import Export/src/org/unesco/jisis/importexport/Bundle.properties
+++ b/DB Import Export/src/org/unesco/jisis/importexport/Bundle.properties
@@ -2,3 +2,4 @@ OpenIDE-Module-Name=DB Import Export
 MSG_CreateDatabaseWithPlainOldIsisFdtFst="Database Creation is done!
 MSG_YouMustOpenTheDatabaseForImport=You must open the Database in which you wish to import data!
 MSG_IsoFileWillBeImportedToDatabase=ISO file will be imported to Database:
+MSG_NO_HIT_SORT_FILE=HIT FILE NOT FOUND !
