--- a/DatabaseWizards/src/org/unesco/jisis/wizards/marc/Bundle.properties
+++ b/DatabaseWizards/src/org/unesco/jisis/wizards/marc/Bundle.properties
@@ -32,7 +32,6 @@ ExpMarcXmlVisualPanel.jLabel13.text=RECORD SELECTION
 ExpMarcXmlVisualPanel.jLabel8.text=Encoding:
 ExpMarcXmlVisualPanel.jLabel15.text=From Query:
 ExpMarcXmlVisualPanel.jLabel2.text=Name of MarcXML file:
-ExpMarcXmlVisualPanel.lblHitSortFile.text=Use this Hit Sort File for driving the output:
 ExpMarcXmlVisualPanel.rdbMfnRange.text=MFN Range
 ExpMarcXmlVisualPanel.rdbAllMfn.text=All
 ExpMarcXmlVisualPanel.rdbMarked.text=Marked
@@ -53,7 +52,6 @@ ExpSelectFormatVisualPanel.rdbDUBLIN_CORE.text=DUBLIN CORE
 ExpSelectFormatVisualPanel.rdbISO2709.text=ISO2709 Format (or MARC)
 ExpSelectFormatVisualPanel.jPanel1.border.title=In Which Format
 ExpMODSVisualPanel.jLabel2.text=Name of MODS File:
-ExpMODSVisualPanel.lblHitSortFile.text=Use the selected Hit Sort File for driving the output
 ExpMODSVisualPanel.jLabel15.text=From Query:
 ExpMODSVisualPanel.rdbSearchResult.text=Search Results
 ExpMODSVisualPanel.jLabel14.text=Enter MFNs and/or MFN ranges separated by commas. For example 1,10,100-150,50
@@ -229,7 +227,6 @@ ExpSelectFormatVisualPanel.jLabel6.text=<html><i>In both cases, the markup tags 
 ExpDCVisualPanel.jLabel2.text=Name of DC file:
 ExpDCVisualPanel.jLabel1.text=Output Directory:
 ExpDCVisualPanel.txtOutputDir.text=
-ExpDCVisualPanel.lblHitSortFile.text=Use this Hit Sort File for driving the output:
 ExpDCVisualPanel.jLabel15.text=From Query:
 ExpDCVisualPanel.rdbSearchResult.text=Search Results
 ExpDCVisualPanel.jLabel14.text=Enter MFNs and/or MFN ranges separated by commas. For example 1,10,100-150,50
@@ -259,3 +256,6 @@ DATABASE=Database
 PARAMETERS=Parameters
 NONE=<none>
 ImportNewVisualPanel31.jLabel1.text=Database to which the imported records will be added
+ExpMarcXmlVisualPanel.rdbHitSort.text=Use this Hit Sort File for driving the output:
+ExpMODSVisualPanel.rdbHitSort.text=Use this Hit Sort File for driving the output:
+ExpDCVisualPanel.rdbHitSort.text=Use this Hit Sort File for driving the output:
