--- a/jisis-corelib/nbproject/project.properties
+++ b/jisis-corelib/nbproject/project.properties
@@ -8,6 +8,7 @@ file.reference.commons-lang3-3.1.jar=release/modules/ext/commons-lang3-3.1.jar
 file.reference.gson-2.1.jar=release/modules/ext/gson-2.1.jar
 file.reference.jcl-over-slf4j-1.7.25.jar=release/modules/ext/jcl-over-slf4j-1.7.25.jar
 file.reference.jisis-core.jar=release/modules/ext/jisis-core.jar
+file.reference.joda-time-2.9.9.jar=release/modules/ext/joda-time-2.9.9.jar
 file.reference.jsoup-1.8.1.jar=release/modules/ext/jsoup-1.8.1.jar
 file.reference.logback-classic-1.2.3.jar=release/modules/ext/logback-classic-1.2.3.jar
 file.reference.logback-core-1.2.3.jar=release/modules/ext/logback-core-1.2.3.jar
