ClientDatabaseProxy - changed call to updateDatabaseInfo() to updateDbInfoForIndex() for index methods Cleaning of old version of external jar files

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,36 @@
 /org-netbeans-swing-outline/build/
 /swingx-all-1.6.3/build/
 /Search History/build/
+/dist/
+/java_cup/build/
+/looks-2_3_1/build/
+/build/
+/Berkeley je-6.4.25/build/
+/groovy-all-2.0.0/build/
+/icepdf-viewer/build/
+/itext-5.5.4/build/
+/lucene-6.5.0/build/
+/jisis-corelib/build/
+/JISIS Utils/build/
+/ConnectionsPool/build/
+/JavaFX-Browser/build/
+/JettyWebServer/build/
+/JISIS GUI/build/
+/JISIS Core/build/
+/DataViewer/build/
+/Data Entry Ex/build/
+/FstManager/build/
+/DataEntryExDl/build/
+/Data Browser/build/
+/Z3950/build/
+/DB Import Export/build/
+/FreeTextSearch/build/
+/FdtExplorer/build/
+/GlobalOperations/build/
+/Data Search/build/
+/DB Display Font/build/
+/GroovyConsole/build/
+/DatabasesPool/build/
+/FmtManager/build/
+/DataDefinition/build/
+/DatabaseWizards/build/
