--- a/Z3950/nbproject/project.properties
+++ b/Z3950/nbproject/project.properties
@@ -6,6 +6,7 @@ file.reference.ki-jzkit-hss-1_2_1.jar=release/modules/ext/ki-jzkit-hss-1_2_1.jar
 file.reference.ki-jzkit-iface-1_2_1.jar=release/modules/ext/ki-jzkit-iface-1_2_1.jar
 file.reference.ki-jzkit-z3950-1_2_1.jar=release/modules/ext/ki-jzkit-z3950-1_2_1.jar
 file.reference.ki-util.jar=release/modules/ext/ki-util.jar
+file.reference.log4j-1.2.16.jar=release/modules/ext/log4j-1.2.16.jar
 file.reference.xalan.jar=release/modules/ext/xalan.jar
 javac.source=1.7
 javac.compilerargs=-Xlint -Xlint:-serial
