Fix synchronization between Data Entry, Data Viewer and Data Browser Reduced Number of suggestions requested to server from 200 to 150 Added Wait Cursor when getting rows for dictionary terms and DB Browser PrintSort - Fix output of HTML header for plaintext when 'Don't use sorting" selected

--- a/DataViewer/src/org/unesco/jisis/database/explorer/Bundle.properties
+++ b/DataViewer/src/org/unesco/jisis/database/explorer/Bundle.properties
@@ -21,7 +21,7 @@ HINT_Last=Last MFN
 MSG_DatabaseIsEmpty=Database is Empty!
 MSG_DataEntryErrorDialogTitle=No Records in Database
 LBL_Format=Format
-LBL_Max=Last Mfn:
+LBL_Max=Next MFN to be Assigned:
 MSG_NewFormat=Name of the new Format
 MSG_NewFormatTitle=Creation of a new Format
 Templates/Other/htmlRecordExport=HtmlRecordExport
