Fix: Z39.50 Query was not using the server properties but hard coded ones (marc21, f, charset_utf8) and unimarc queries didn't return any results

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@
 /FmtManager/build/
 /DataDefinition/build/
 /DatabaseWizards/build/
+/Search-Results-Update/build/
+/Search-Results-Update/nbproject/private/
