Improvements: Data Entry and Advanced Data Entry Modules are now synchronized  to display the Data Viewer or Search Module record

--- a/Data Entry Ex/src/org/unesco/jisis/dataentryex/Bundle.properties
+++ b/Data Entry Ex/src/org/unesco/jisis/dataentryex/Bundle.properties
@@ -60,8 +60,6 @@ MSG_FieldLabel=Field
 MSG_DeleteRecLabel=You are about to delete selected record. Are you sure?
 MSG_DeleteRecDialogTitle=Delete Selected Record
 OutlineTopComponent.btnReload.text=Reload
-OutlineTopComponent.btnShowHide.toolTipText=show (or remove) empty fields from the display
-OutlineTopComponent.btnShowHide.text=Show/Hide Empty Fields
 OutlineTopComponent.btnPaste.toolTipText=Paste a record from the stack
 OutlineTopComponent.btnPaste.text=Paste
 OutlineTopComponent.btnCopy.toolTipText=Copy the current record in the stack.
@@ -89,3 +87,7 @@ OutlineTopComponent.btnLast.text=Last
 OutlineTopComponent.btnPrev.text=Prev
 OutlineTopComponent.btnNext.text=Next
 OutlineTopComponent.btnMarc21FixedFieldEditor.text=FF
+OutlineTopComponent.tbtnShow.text=Show
+OutlineTopComponent.tbtnShow.toolTipText=Show Empty Fields
+OutlineTopComponent.tbtnHide.toolTipText=Hide Empty Fields
+OutlineTopComponent.tbtnHide.text=Hide
