Changes for updating to marc4j-2-8-3 Fix for JavaFX setting of JFXPanel in SwingFXWebView.java

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,7 +26,7 @@ project.org.unesco.jisis.je_6_4_25=Berkeley je-6.4.25
 project.org.unesco.jisis.jetty.webserver=JettyWebServer
 project.org.unesco.jisis.jisiscore=JISIS Core
 project.org.unesco.jisis.jisisgui=JISIS GUI
-project.org.unesco.jisis.marc4j=marc4j-2.4
+project.org.unesco.jisis.marc4j_2_8_3=marc4j-2.8.3
 project.org.unesco.jisis.printsort=PrintSort
 project.org.unesco.jisis.searchhistory=Search History
 project.org.unesco.jisis.swingx=swingx-all-1.6.3
@@ -61,7 +61,6 @@ modules=\
     ${project.org.unesco.jisis.FmtManager}:\
     ${project.org.unesco.jisis.fdtexplorer}:\
     ${project.org.unesco.jisis.weboutput}:\
-    ${project.org.unesco.jisis.marc4j}:\
     ${project.org.unesco.jisis.GroovyConsole}:\
     ${project.org.unesco.jisis.dbdisplayfont}:\
     ${project.org.unesco.jisis.jisisgui}:\
@@ -83,7 +82,8 @@ modules=\
     ${project.org.unesco.jisis.iText554}:\
     ${project.org.unesco.jisis.tika_1_13}:\
     ${project.org.unesco.jisis.je_6_4_25}:\
-    ${project.org.unesco.lucene_6_5_0}
+    ${project.org.unesco.lucene_6_5_0}:\
+    ${project.org.unesco.jisis.marc4j_2_8_3}
 project.org.jisis.termsdictionary=Terms Dictionary
 project.org.unesco.jisis.database.explorer=DataViewer
 project.org.unesco.jisis.databrowser=Data Browser
