1) Added Italian bundle properties files 2) New method getJavaVersion() in JavaISIS.java Allow these formats:         // 1.8.0_72-ea         // 9-ea         // 9         // 9.0.1

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,7 @@ project.org.unesco.jisis.weboutput=WebOutput
 project.org.unesco.jisis.z3950=Z3950
 project.org.unesco.lucene_6_5_0=lucene-6.5.0
 project.outline=org-netbeans-swing-outline
-run.args.extra=-J-Xmx4096M -J-Xms1024M  -J-Dlogback.configurationFile=conf/logback.xml  -J-Dhttp.agent="Mozilla/5.0 (Windows NT 10.0; WOW64; rv:50.0) Gecko/20100101 Firefox/50.0" -J-Dapple.laf.useScreenMenuBar=true -J-Dapple.awt.graphics.UseQuartz=true -J-Dsun.java2d.noddraw=true -J-Dsun.java2d.dpiaware=true -J-Dorg.netbeans.ProxyClassLoader.level=1000 -J-server -J-Dnetbeans.slow.system.clipboard.hack=false -J-Duser.language=en -J-Duser.country=EN -J-Dnetbeans.logger.console=true -J-ea 
+run.args.extra=-J-Xmx4096M -J-Xms1024M  -J-Dlogback.configurationFile=conf/logback.xml  -J-Dhttp.agent="Mozilla/5.0 (Windows NT 10.0; WOW64; rv:50.0) Gecko/20100101 Firefox/50.0" -J-Dapple.laf.useScreenMenuBar=true -J-Dapple.awt.graphics.UseQuartz=true -J-Dsun.java2d.noddraw=true -J-Dsun.java2d.dpiaware=true -J-Dorg.netbeans.ProxyClassLoader.level=1000 -J-server -J-Dnetbeans.slow.system.clipboard.hack=false -J-Duser.language=it -J-Duser.country=IT -J-Dnetbeans.logger.console=true -J-ea 
 disabled.clusters=\
     enterprise2,\
     harness,\
